@@ -1,3 +1,9 @@
+2008-12-03  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gtksourceview/gtksourceview.c:
+	* gtksourceview/gtksourceview.h:
+	Added non-breaking spaces drawing.
+
 2008-11-29  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* gtksourceview/gtksourceiter.c: (forward_chars_with_skipping):
